<resources>
    <string name="app_name">MovieDBApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Full Name</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>

    <string name="reset_password">Reset Password</string>
    <string name="reset_password_message">We will send you password reset link on your Email</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="please_fill_all_fields">Please fill in all fields</string>
    <string name="passwords_do_not_match">New passwords do not match</string>
    <string name="password_changed_successfully">Password changed successfully</string>
    <string name="password_change_failed">Password change failed</string>
</resources>